--- a/style.css
+++ b/style.css
@@ -1,8 +1,22 @@
 body{
     background-image: url("http://www.larueministries.com/wp-content/uploads/2014/09/treasure-box-1024x576.jpg");
     background-repeat: no-repeat;
-    background-size: 100% 1100%;
+    background-size: cover
     }
+#Pandora{
+    margin-left: auto;
+	margin-right: auto;
+	display: block;
+
+}
 #k{
-    position: relative;
-    }
+    margin-top: 300px
+}
+#t{
+    margin-top: 10px
+}
+.api{
+    width: 300px;
+    height:300px
+}
+
