begin to repurpose

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("http://www.larueministries.com/wp-content/uploads/2014/09/treasure-box-1024x576.jpg");
+    background-image: url();
     background-repeat: no-repeat;
     background-size: cover
     }
