--- a/css/about.css
+++ b/css/about.css
@@ -33,6 +33,40 @@
     padding-top: 10px;
 }
 
+/* Below is the css for the image*/
+#image_container {
+    position: relative;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: auto;
+    width: 500px;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #008CBA;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 10px;
+}
+#image_container:hover .overlay {
+    opacity: 1;
+}
+.text {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
 body{
     background-repeat: no-repeat;
     background-attachment: fixed;
